add wave-segment based on energy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,6 @@ add_definitions(-O3 -g -std=c++11 -DHAVE_CLAPACK -pthread)
 include_directories(${PYTHON_INC} ${KALDI_DIR}/tools/openfst/include ${KALDI_DIR}/tools/CLAPACK ${KALDI_DIR}/src)
 link_directories(${KALDI_DIR}/src/lib ${BOOST_LIB})
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../)
-add_subdirectory(PyFbank)
-add_subdirectory(PyNnet1)
+add_subdirectory(pyfbank)
+add_subdirectory(pynnet1)
+add_subdirectory(utils)
